fix: обновление z-index для заголовка и верхней панели

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -2,7 +2,7 @@
   background: white;
   position: relative;
   width: 100%;
-  z-index: 3 !important;
+  z-index: 1001 !important;
 }
 
 .top_bar {
@@ -61,7 +61,7 @@
   top: 0;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
-  z-index: 3 !important;
+  z-index: 1000 !important;
 
   &__container {
     display: flex;
